--- a/styles/myStyles.css
+++ b/styles/myStyles.css
@@ -134,3 +134,13 @@ body {
   color: red;
   font-weight: 800;
 }
+
+
+@media (max-width: 600px){
+  #user-input, #user-display  {
+    display: block;
+    width: 100%;
+  }
+
+
+}
